--- a/package.json
+++ b/package.json
@@ -4,18 +4,19 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "dev": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "dotenv": "^8.1.0",
-    "express": "^4.17.1",
-    "nexmo-client": "^9.0.0",
-    "pug": "^2.0.4"
+    "@vonage/jwt": "^1.3.0",
+    "body-parser": "^1.20.2",
+    "dotenv": "^8.6.0",
+    "express": "^4.18.2",
+    "nexmo-client": "^9.3.1",
+    "pug": "^3.0.2"
   },
   "devDependencies": {
-    "nodemon": "^1.19.3"
+    "nodemon": "^2.0.22"
   }
 }
