--- a/example.env
+++ b/example.env
@@ -1,6 +1,12 @@
+VONAGE_API_KEY=
+VONAGE_API_SECRET=
 VONAGE_APPLICATION_ID=
 VONAGE_PRIVATE_KEY=private.key
 PORT=5000
 VONAGE_NUMBER=
 DESTINATION_PHONE_NUMBER=
 WEBRTC_USER=supportuser
+MOBILE_USER=
+MOBILE_USER=
+CONVERSATION_NAME=customer_chat
+ADMIN_USER=
