--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ vonage_app.json
 
 #private keys
 *.key
+*jwt
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
