--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@vonage/auth": "^1.4.0",
     "@vonage/jwt": "^1.3.0",
+    "@vonage/messages": "^1.6.0",
+    "@vonage/server-sdk": "^3.6.0",
     "body-parser": "^1.20.2",
     "dotenv": "^8.6.0",
     "express": "^4.18.2",
